Revised gradle skeleton